# trail-lang

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASING.md  pyproject.toml
.claude/skills/trail-mcp/: SKILL.md
.claude/skills/trail-mcp/references/: expressions.md  tools.md
.github/workflows/: ci.yml  release.yml
docs/mcp/: README.md
docs/mcp/references/: functions.md
examples/: performance.trail  piotroski.trail
tests/: conftest.py  test_acceptance_performance.py  test_acceptance_piotroski.py  test_align.py  test_align_override.py  test_align_pit.py  test_by_on_def.py  test_catalog.py  test_cli.py  test_coalesce.py  test_compiler.py  test_completeness_batch.py  test_config.py  test_conform.py  test_country.py  test_deps.py  test_describe.py  test_entity_pin.py  test_export_name.py  test_factor.py  test_fetch.py  test_fieldname.py  test_frequency.py  test_functions.py  test_imports.py  test_ops_factor.py  test_ops_quant.py  test_ops_resample.py  test_ops_time.py  test_ops_transforms.py  test_ops_xs.py  test_parser_decls.py  test_parser_expr.py  test_perf_optimizations.py  test_pipeline.py  test_registry.py  test_registry_consistency.py  test_schema_fixture.py  test_schema_plugins.py  test_smoke.py  (+10 more)
tests/fixtures/: fixture.yaml
tests/mcp/: test_data.py  test_errors.py  test_format.py  test_server.py  test_tools_describe.py  test_tools_eval.py  test_tools_meta.py  test_tools_run.py
trail/: __init__.py  align.py  ast.py  catalog.py  cli.py  compiler.py  config.py  country.py  deps.py  describe.py  fieldname.py  fixtures.py  grammar.lark  library.py  macro.py  ops.py  parser.py  pipeline.py  registry.py  schema.py  source.py  sources.py  testing.py  validate.py
trail/mcp/: __init__.py  _config_data.py  data.py  errors.py  format.py  server.py  tools.py
trail/stdlib/: calculus.trail  core.trail  factor.trail  geometry.trail  math.trail  risk.trail  stats.trail  timeseries.trail  transform.trail
