[project]
name = "trail-lang"
version = "0.8.0"
description = "A declarative expression language for financial indicators, scoring, and screening over entity panels"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Usman Shahid", email = "u.manshahid@gmail.com" }]
keywords = ["finance", "quant", "factor", "screening", "indicators", "expression-language", "polars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Operating System :: OS Independent",
]
dependencies = [
    "lark>=1.2",
    "polars>=1.20",
    "click>=8.1",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/trail-language"
Repository = "https://github.com/trail-language/trail-py"
Specification = "https://github.com/trail-language/spec"
Issues = "https://github.com/trail-language/trail-py/issues"

[project.scripts]
trail = "trail.cli:main"

# Built-in data sources. Third-party providers register additional drivers under the
# same group, so `pip install trail-<name>` makes `driver: <name>` usable in trail.yaml.
[project.entry-points."trail.sources"]
fixture = "trail.sources:FixtureSource"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8", "pandas>=2.2", "pyarrow>=17"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trail"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
